--- a/phinx.yml
+++ b/phinx.yml
@@ -19,7 +19,7 @@ environments:
         host: localhost
         name: superframework
         user: root
-        pass: '44865710'
+        pass: ''
         port: 3306
         charset: utf8
 
